--- a/styles.css
+++ b/styles.css
@@ -721,7 +721,7 @@
 .project-card:nth-child(2) {
     background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,
     rgba(17, 17, 17, 0.6) 100%),
-    url('./images/jammming1.png');
+    url('./images/adhoc.png');
 }
 
 .project-card:nth-child(3) {
